--- a/fishmine/webapp/resources/web.properties
+++ b/fishmine/webapp/resources/web.properties
@@ -69,6 +69,7 @@ attributelink.zfin.Gene.7955.primaryIdentifier.imageName=zfinlogo.png
 #attributelink.flymineList.Gene.7955.primaryIdentifier.list.imageName=flymine_logo_link.gif
 #attributelink.flymineList.Gene.7955.primaryIdentifier.list.usePost=true
 
+#attributelink.sgdList.Gene.7955.primaryIdentifier.list.url=http://localhost:8080/sgd/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=S. cerevisiae
 attributelink.sgdList.Gene.7955.primaryIdentifier.list.url=http://www.flymine.org/sgd/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=S. cerevisiae
 attributelink.sgdList.Gene.7955.primaryIdentifier.list.text=S.cerevisiae orthologues in SGD protomine
 attributelink.sgdList.Gene.7955.primaryIdentifier.list.imageName=SGD_logo_large.png
