modmine webapp: added link to track preview from submission (to be updated to official gbrowse server)

--- a/modmine/webapp/resources/web.properties
+++ b/modmine/webapp/resources/web.properties
@@ -6,9 +6,19 @@
 # If a "*" is placed as the taxId, the list details page will link to that db in any case (see flymine).
 # If a taxId is present, the page will link to that db only if there are objects in the list with that taxId (see wormbase).
 
-attributelink.modencode.Submission.*.DCCid.url=http://submit.modencode.org/submit/public/download/<<attributeValue>>?root=data
-attributelink.modencode.Submission.*.title.text=Download data submitted to DCC
-attributelink.modencode.Submission.*.DCCid.imageName=modftp_vs.png
+# NB: the link is to the TEST GBROWSE: need to be updated when available
+# e.g. http://modencode.oicr.on.ca/cgi-bin/gbrowse/worm
+attributelink.modencode1.Submission.6239.DCCid.url=http://modencode2.oicr.on.ca/fgb2/gbrowse/worm/?ds=<<attributeValue>>
+attributelink.modencode1.Submission.6239.title.text=Preview track in GBrowse
+attributelink.modencode1.Submission.6239.DCCid.imageName=wgb_vs.png
+
+attributelink.modencode2.Submission.7227.DCCid.url=http://modencode2.oicr.on.ca/fgb2/gbrowse/fly/?ds=<<attributeValue>>
+attributelink.modencode2.Submission.7227.title.text=Preview track in GBrowse
+attributelink.modencode2.Submission.7227.DCCid.imageName=dgb_vs.png
+
+attributelink.modencode3.Submission.*.DCCid.url=http://submit.modencode.org/submit/public/download/<<attributeValue>>?root=data
+attributelink.modencode3.Submission.*.title.text=Download data submitted to DCC
+attributelink.modencode3.Submission.*.DCCid.imageName=modftp_vs.png
 
 attributelink.flymine.EST.*.primaryIdentifier.url=http://www.ncbi.nlm.nih.gov/sites/entrez?db=nucest&cmd=search&term=%20<<attributeValue>>
 attributelink.flymine.EST.*.primaryIdentifier.text=EST: <<attributeValue>>
