--- a/intermine/objectstore/main/.classpath
+++ b/intermine/objectstore/main/.classpath
@@ -20,5 +20,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/commons-collections-3.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-io-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-lang-2.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/base64.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
