New flashy password reset email option. Also fix a few bugs and disallow logging in with the hash value. Refs #2120
Former-commit-id: ea316790611f25f5d5c667967e32951ede5b87fe

--- a/intermine/webapp/main/resources/webapp/WEB-INF/global.web.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/global.web.properties
@@ -1,8 +1,10 @@
 # properties for the webapp that aren't model specific
 mail.host=mail.flymine.org
 mail.from=support@flymine.org
-mail.subject=Password for the InterMine system
-mail.text=Your password for the InterMine system is: {0}
+mail.subject=Welcome to the InterMine system
+mail.text=Welcome to the InterMine system. You have successfully created an account - your email address is your user name.
+mail.passwordSubject=Password reset for InterMine
+mail.passwordText=Follow the following link to reset your password: {0}
 mail.smtp.starttls.enable=false
 mail.smtp.auth=false
 mail.smtp.user=mail_username
