--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -619,7 +619,7 @@ login.username = Username:
 login.password = Password:
 login.login = Log in
 login.needspassword = If you have forgotten your password, \
-  enter your email address here your password will be emailed to you
+  enter your email address here to have a password change link emailed to you
 login.passwordrequest = Request password
 login.emptyusername = Please enter a username
 login.invalidusername = No user found for email address &quot;{0}&quot;
@@ -627,7 +627,7 @@ login.wrongpassword = Incorrect password: please try again
 login.invalidemail = Unable to send confirmation email.
 login.loggedin = Logged in as user &quot;{0}&quot;
 login.loggedout = You have logged out
-login.emailed = Your password has been sent to &quot;{0}&quot;
+login.emailed = A change password link has been sent to &quot;{0}&quot;
 login.heading.password = Manage password
 login.tab = mymine
 login.renamedbags = Your list {0} was renamed to {1} because a list with that name already exists
@@ -665,6 +665,9 @@ password.nomatchpass = Please make sure you typed twice the same password
 password.usernotexist = The user "{0}" does not exist. Please make sure you enter a valid username
 password.wrongpass = The password provided is not valid
 password.mailnotsent = Mail not sent
+password.invalidToken = Sorry, but the the password change token is either invalid or expired.
+passwordReset.tab = mymine
+passwordReset.title = Reset Password
 
 # waiting page
 waiting.title = Running Query...
