--- a/intermine/webapp/main/resources/webapp/WEB-INF/global.web.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/global.web.properties
@@ -3,8 +3,8 @@ mail.host=mail.flymine.org
 mail.from=support@flymine.org
 mail.subject=Welcome to the InterMine system
 mail.text=Welcome to the InterMine system. You have successfully created an account - your email address is your user name.
-mail.passwordSubject=Password reset for InterMine
-mail.passwordText=Follow the following link to reset your password: {0}
+mail.passwordSubject=Password reset for {0}
+mail.passwordText=Use the following link to reset your password: {0}
 mail.smtp.starttls.enable=false
 mail.smtp.auth=false
 mail.smtp.user=mail_username
