missing portal welcome msg
Former-commit-id: 65d52d92c3d9631ae7c81c1cac6aa84b48d015df

--- a/fishmine/webapp/resources/web.properties
+++ b/fishmine/webapp/resources/web.properties
@@ -78,3 +78,5 @@ attributelink.sgdList.Gene.7955.primaryIdentifier.list.usePost=true
 #list of pages with fixed width layout
 layout.fixed = begin,template,templates,bag,customQuery,query
 theme = blue
+
+portal.welcome = Welcome to the ZFIN protomine!
