--- a/yeastmine/webapp/resources/web.properties
+++ b/yeastmine/webapp/resources/web.properties
@@ -81,3 +81,6 @@ layout.fixed = begin,template,templates,bag,customQuery,query
 
 #theme used (themes in intermine/webapp/main/resources/webapp/themes/)
 theme = gold
+
+portal.welcome = Welcome to the SGD protomine!
+
