missing portal msg

--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -734,6 +734,7 @@ errors.badportalquery = Bad link into InterMine
 errors.badportalclass = No class or wrong class specified
 portal.nomatches = No matches found.
 portal.noorthologues = No orthologues were found.
+portal.orthologues = Your orthologues have been converted:  {0}
 #errors.pollquery.badqid = I'm sorry, I can't find a running query with qid {0}
 errors.pollquery.emptyqid = No qid specified. (qid is "{0}")
 errors.pollquery.cancelled = Query cancelled (qid was "{0}")
