--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -677,6 +677,16 @@ waiting.message = Analysing and running your query. Please wait...
 tag.body.hidden=Hidden
 tag.helplink.title=About...
 
+# portal 
+portal.nomatches = No matches found.
+portal.noorthologues = No orthologues were found.
+portal.nomatches = No matches found for {0} 
+portal.duplicates = Found multiple entries for {0} 
+portal.converted = Converted {0} 
+portal.orthologues = Found {0} orthologues in {1} for {2} {3}s <a href="loadQuery.do?method=xml&skipBuilder=true&trail=|query&query={4}" >[view orthologue mapping]</a> 
+portal.nomatches.orthologues = No {0} orthologues found for {1} 
+portal.orthologue.wrongparameter = {0} is not a valid Organism short name 
+
 # ERRORS
 error.title = Error page
 error.description = oops
@@ -732,9 +742,6 @@ errors.importFailedException = Import of query(ies) failed. Invalid format of qu
 errors.importQuery.noqueries = No valid queries found
 errors.badportalquery = Bad link into InterMine
 errors.badportalclass = No class or wrong class specified
-portal.nomatches = No matches found.
-portal.noorthologues = No orthologues were found.
-portal.orthologues = Your orthologues have been converted:  {0}
 #errors.pollquery.badqid = I'm sorry, I can't find a running query with qid {0}
 errors.pollquery.emptyqid = No qid specified. (qid is "{0}")
 errors.pollquery.cancelled = Query cancelled (qid was "{0}")
@@ -765,4 +772,3 @@ import.queries.notloggedin = You must be logged in to import more than one query
 #SERVICE LINK
 serviceLink.tab = templates
 serviceLink.title = Service link
-
