link from protomines to flymine preview

--- a/fishmine/webapp/resources/web.properties
+++ b/fishmine/webapp/resources/web.properties
@@ -75,6 +75,11 @@ attributelink.sgdList.Gene.7955.primaryIdentifier.list.text=S.cerevisiae ortholo
 attributelink.sgdList.Gene.7955.primaryIdentifier.list.imageName=SGD_logo_large.png
 attributelink.sgdList.Gene.7955.primaryIdentifier.list.usePost=true
 
+attributelink.flyList.Gene.7955.primaryIdentifier.list.url=http://preview.flymine.org/preview/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=D. melanogaster
+attributelink.flyList.Gene.7955.primaryIdentifier.list.text=D.mel orthologues in FlyMine
+attributelink.flyList.Gene.7955.primaryIdentifier.list.imageName=flymine_logo_link.gif
+attributelink.flyList.Gene.7955.primaryIdentifier.list.usePost=true
+
 #list of pages with fixed width layout
 layout.fixed = begin,template,templates,bag,customQuery,query
 theme = blue
