--- a/yeastmine/webapp/resources/web.properties
+++ b/yeastmine/webapp/resources/web.properties
@@ -62,6 +62,9 @@ attributelink.zfinproto.Gene.7955.primaryIdentifier.url=http://www.flymine.org/z
 attributelink.zfinproto.Gene.7955.primaryIdentifier.text=ZFIN protomine: <<attributeValue>>
 attributelink.zfinproto.Gene.7955.primaryIdentifier.imageName=zfinlogo.png
 
+attributelink.flymine.Gene.7227.primaryIdentifier.url=http://www.flymine.org/portal.do?externalid=<<attributeValue>>&class=Gene
+attributelink.flymine.Gene.7227.primaryIdentifier.text=FlyMine: <<attributeValue>>
+attributelink.flymine.Gene.7227.primaryIdentifier.imageName=flymine_logo_link.gif
 
 # ----------- ortho links -----------------------
 
@@ -75,6 +78,11 @@ attributelink.zfinOrthologues.Gene.4932.secondaryIdentifier.list.url=http://www.
 attributelink.zfinOrthologues.Gene.4932.secondaryIdentifier.list.text=D.rerio orthologues at ZFIN protomine
 attributelink.zfinOrthologues.Gene.4932.secondaryIdentifier.list.imageName=zfinlogo.png
 attributelink.zfinOrthologues.Gene.4932.secondaryIdentifier.list.usePost=true
+
+attributelink.flyList.Gene.4932.primaryIdentifier.list.url=http://preview.flymine.org/preview/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=D. melanogaster
+attributelink.flyList.Gene.4932.primaryIdentifier.list.text=D.mel orthologues in FlyMine
+attributelink.flyList.Gene.4932.primaryIdentifier.list.imageName=flymine_logo_link.gif
+attributelink.flyList.Gene.4932.primaryIdentifier.list.usePost=true
 
 #list of pages with fixed width layout
 layout.fixed = begin,template,templates,bag,customQuery,query
