--- a/intermine/integrate/test/.classpath
+++ b/intermine/integrate/test/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="src" path="/fulldata"/>
 	<classpathentry kind="src" path="/testmodel"/>
 	<classpathentry exported="true" kind="src" path="/intermine-objectstore-test"/>
+	<classpathentry kind="lib" path="/intermine-objectstore-main/lib/ojdbc14.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
