--- a/yeastmine/webapp/resources/model.properties
+++ b/yeastmine/webapp/resources/model.properties
@@ -2,3 +2,12 @@
 # this file merges with InterMineWebApp.properties
 
 funding = InterMine is funded by the <a href="http://www.nih.gov/" target="_new" title="US National Institutes of Health"><img src="images/logo_nih.gif" height="42px" width="52px" border="0" /></a>
+
+exporter.sequence.description=Export in FASTA format
+exporter.gff3.description=Export in GFF3 format
+
+organism.ncbitaxonomybrowser=NCBI Taxonomy Browser
+synonyms.external.links=Links to external databases
+publication.pubmed=PubMed entry
+locatedSequenceFeature.GBrowse.message=Genome browser view (GBrowse)
+fasta.export.classes = LocatedSequenceFeature,Protein,Translation
