--- a/intermine/web/main/project.properties
+++ b/intermine/web/main/project.properties
@@ -1,4 +1,4 @@
 compile.dependencies = intermine/objectstore/main,\
-                       intermine/web/model/userprofile, \
+                       intermine/api/main,\
                        intermine/pathquery/main
 
