--- a/intermine/api/model/userprofile/.classpath
+++ b/intermine/api/model/userprofile/.classpath
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="build/gen/src"/>
-	<classpathentry kind="src" path="resources"/>
+	<classpathentry kind="lib" path="dist/userprofile.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="/intermine-objectstore-main"/>
-	<classpathentry kind="lib" path="build/main"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/intermine-objectstore-main"/>
+	<classpathentry kind="output" path="build/classes"/>
 </classpath>
