--- a/yeastmine/dbmodel/resources/objectstoresummary.config.properties
+++ b/yeastmine/dbmodel/resources/objectstoresummary.config.properties
@@ -13,8 +13,11 @@ org.intermine.model.bio.GOAnnotation.fields = qualifier
 org.intermine.model.bio.GOEvidenceCode.fields = code
 org.intermine.model.bio.OntologyTerm.fields = namespace
 org.intermine.model.bio.Gene.fields = featureType
+org.intermine.model.bio.Phenotype.autocomplete = mutantType, experimentType
 
 # autocomplete = in forms on the webapp, these fields will offer suggestions to the user as they type
 # index is created in post process create-autocomplete-index
 org.intermine.model.bio.GOTerm.autocomplete = name
 org.intermine.model.bio.OntologyTerm.autocomplete = name
+org.intermine.model.bio.Phenotype.autocomplete = observable
+
