--- a/intermine/api/main/.classpath
+++ b/intermine/api/main/.classpath
@@ -2,14 +2,14 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/intermine-objectstore-main"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/intermine-pathquery"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/userprofile"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/intermine-objectstore-main"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/intermine-pathquery"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/userprofile"/>
 	<classpathentry kind="lib" path="lib/xalan.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/lucene-core-2.3.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/highlighter-dev.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/snowball-1.1-dev.jar"/>
-	<classpathentry kind="lib" path="lib/stax-api-1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/stax-api-1.0.jar"/>
 	<classpathentry kind="lib" path="lib/stax-ri-1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
