Fixes for changed package name.
Former-commit-id: f6bad02eb8e82933944b1cbd66e458b21683be53

--- a/intermine/webapp/main/project.properties
+++ b/intermine/webapp/main/project.properties
@@ -8,6 +8,7 @@ compile.dependencies = intermine/objectstore/main,\
 # will be included in the webapp
 
 deploy.dependencies = intermine/objectstore/main,\
+                      intermine/api/main,\
                       intermine/web/main,\
                       intermine/api/model/userprofile, \
                       intermine/pathquery/main
