--- a/yeastmine/webapp/resources/web.properties
+++ b/yeastmine/webapp/resources/web.properties
@@ -16,6 +16,14 @@ quickSearch.identifiers = e.g example identifier
 quickSearch.templates = e.g. example template name
 quickSearch.lists = e.g. example list name
 
+# Header - these will populate the top right navigation 
+header.links=help,FAQ,about,cite,software
+header.links.FAQ=http://trac.flymine.org/wiki/FlyMineFAQ
+header.links.about=http://blog.flymine.org/?page_id=35
+header.links.cite=http://blog.flymine.org/?page_id=37
+header.links.help=http://blog.flymine.org/?page_id=45
+header.links.software=http://blog.flymine.org/?page_id=39
+
 # Properties used by attributeLinkDisplayer.jsp
 # 1. Format: 'attributelink' + unique_name + taxonId + attributeName + (url|imageName|text)
 # 2. The value of the attribute (for the current object) is substituted anywhere the string
