--- a/yeastmine/webapp/resources/web.properties
+++ b/yeastmine/webapp/resources/web.properties
@@ -3,7 +3,7 @@
 # as the WEB_PROPERTIES attribute in the Context
 
 # classes listed in the QueryBuilder section of the home page
-begin.query.classes = Gene,Protein
+begin.query.classes = Gene,Chromosome
 
 # template used for the quicksearch
 begin.browse.template=A_IdentifierSynonym_Object
