--- a/yeastmine/dbmodel/resources/objectstoresummary.config.properties
+++ b/yeastmine/dbmodel/resources/objectstoresummary.config.properties
@@ -22,3 +22,6 @@ org.intermine.model.bio.LiteratureTopic.fields = name
 org.intermine.model.bio.GOTerm.autocomplete = name
 org.intermine.model.bio.OntologyTerm.autocomplete = name
 org.intermine.model.bio.Phenotype.autocomplete = observable
+org.intermine.model.bio.Pathway.autocomplete = name
+org.intermine.model.bio.Interaction.fields = role interactionType
+org.intermine.model.bio.InteractionTerm.autocomplete = name
