--- a/intermine/objectstore/test/.classpath
+++ b/intermine/objectstore/test/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="resources"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/intermine-integrate-main"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/testmodel"/>
+	<classpathentry kind="lib" path="/intermine-objectstore-main/lib/ojdbc14.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
