--- a/snpmine/webapp/.project
+++ b/snpmine/webapp/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>skeletons-webapp</name>
+	<name>snpmine-webapp</name>
 	<comment></comment>
 	<projects>
 	</projects>
