modmine webapp: added experiment.name as a drop down
Former-commit-id: c20e285f2c94c92d9394cae5094cea449560b6f6

--- a/modmine/dbmodel/resources/objectstoresummary.config.properties
+++ b/modmine/dbmodel/resources/objectstoresummary.config.properties
@@ -24,9 +24,8 @@ org.intermine.model.bio.Homologue.fields = type
 org.intermine.model.bio.ProteinDomain.fields = type
 org.intermine.model.bio.UniProtFeature.fields = type
 
-
 org.intermine.model.bio.Antibody.fields = name
-
+org.intermine.model.bio.Experiment.fields = name
 
 org.intermine.model.bio.ProteinDomain.autocomplete = name shortName
 org.intermine.model.bio.GOTerm.autocomplete = name
