--- a/yeastmine/webapp/resources/model.properties
+++ b/yeastmine/webapp/resources/model.properties
@@ -11,3 +11,12 @@ synonyms.external.links=Links to external databases
 publication.pubmed=PubMed entry
 locatedSequenceFeature.GBrowse.message=Genome browser view (GBrowse)
 fasta.export.classes = LocatedSequenceFeature,Protein,Translation
+
+# additional menu items
+menu.tools = Tools
+
+# text in tab
+tools.title = Tools
+tools.description = Tools
+tools.tab = tools
+tools.intro = Sequence tools.
