--- a/yeastmine/webapp/resources/web.properties
+++ b/yeastmine/webapp/resources/web.properties
@@ -81,11 +81,12 @@ attributelink.flymine.Gene.7227.primaryIdentifier.imageName=flymine_logo_link.gi
 #attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.imageName=flymine_logo_link.gif
 #attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.usePost=true
 
-#attributelink.zfinOrthologues.Gene.4932.secondaryIdentifier.list.url=http://localhost:8080/zfin/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=D. rerio
-attributelink.zfinOrthologues.Gene.4932.secondaryIdentifier.list.url=http://www.flymine.org/zfin/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=D. rerio
+attributelink.zfinOrthologues.Gene.4932.secondaryIdentifier.list.url=http://localhost:8080/zfin/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=D. rerio
+#attributelink.zfinOrthologues.Gene.4932.secondaryIdentifier.list.url=http://www.flymine.org/zfin/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=D. rerio&delim=%24
 attributelink.zfinOrthologues.Gene.4932.secondaryIdentifier.list.text=D.rerio orthologues at ZFIN protomine
 attributelink.zfinOrthologues.Gene.4932.secondaryIdentifier.list.imageName=zfinlogo.png
 attributelink.zfinOrthologues.Gene.4932.secondaryIdentifier.list.usePost=true
+attributelink.zfinOrthologues.Gene.4932.secondaryIdentifier.list.delimiter=%24
 
 attributelink.flyList.Gene.4932.primaryIdentifier.list.url=http://preview.flymine.org/preview/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=D. melanogaster
 attributelink.flyList.Gene.4932.primaryIdentifier.list.text=D.mel orthologues in FlyMine
