--- a/flymine-private/experimental-sources/CHEBI/.project
+++ b/flymine-private/experimental-sources/CHEBI/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>bio-source-go</name>
+	<name>bio-source-chebi</name>
 	<comment></comment>
 	<projects>
 	</projects>
