--- a/flymine-private/experimental-mines/pharmine/integrate/.project
+++ b/flymine-private/experimental-mines/pharmine/integrate/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>skeletons-integrate</name>
+	<name>pharmine-integrate</name>
 	<comment></comment>
 	<projects>
 	</projects>
