--- a/modmine/integrate/resources/modmine-static_keys.properties
+++ b/modmine/integrate/resources/modmine-static_keys.properties
@@ -2,13 +2,5 @@ Organism=key_taxonid
 DataSet=key_title
 DataSource=key_name
 
-Synonym=key_synonym
-
-ComputationalAnalysis=key_algorithm
-Organism=key_taxonid
-SimpleRelation=key_all
-
-Gene=key_primaryidentifier
-Protein=key_primaryacc
-Transcript=key_primaryidentifier
-CDS=key_primaryidentifier
+Lab=key_name
+Project=key_surnamePI
