Fix query builder problem combining outer joins with subclasses. Refs #2184
Former-commit-id: 4450f118d7f4b80aba1d621d04eaccdaef9554a2

--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -394,7 +394,7 @@ results.pageinfo.allrows = Displaying all <b>{0}</b> rows
 results.pageinfo.rowrange = Displaying rows <b>{0}</b> to <b>{1}</b>
 results.pageinfo.exact = Total rows:
 results.pageinfo.estimate = Approximate rows:
-results.pageinfo.empty = No results found.  <p>But if you tell use what you want to find out, maybe we can help!  Send us your question using the contact form at the bottom of the page.</p>
+results.pageinfo.empty = No results found.  <p>But if you tell us what you want to find out, maybe we can help!  Send us your question using the contact form at the bottom of the page.</p>
 results.first = First
 results.previous = Previous
 results.next = Next
