--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -661,7 +661,7 @@ password.passwordchange = Change password
 password.changed = Your password was changed successfully
 password.emptyusername = Please enter a username
 password.emptypassword = Please enter a password
-password.nomatchpass = Please make sure you typed twice the same password
+password.nomatchpass = Passwords do not match.  Please make sure you typed the same password twice.
 password.usernotexist = The user "{0}" does not exist. Please make sure you enter a valid username
 password.wrongpass = The password provided is not valid
 password.mailnotsent = Mail not sent
