--- a/modmine/webapp/resources/model.properties
+++ b/modmine/webapp/resources/model.properties
@@ -25,11 +25,11 @@ labs.noFollow = true
 labs.intro = All the labs in the ModEncode consortium. \
                       NOTE:  All external links open in a new window.
 
-experiment.title = Experiments
-experiment.description = Experiments
-experiment.tab = experiments
-experiment.noFollow = true
-experiment.intro = All the experiments in the ModEncode consortium. \
+experiments.title = Experiments
+experiments.description = Experiments
+experiments.tab = experiments
+experiments.noFollow = true
+experiments.intro = All the experiments in the ModEncode consortium. \
                       NOTE:  All external links open in a new window.
 
 submissions.title = Submissions
@@ -40,5 +40,5 @@ submissions.intro = All the subs in the ModEncode consortium. \
                       NOTE:  All external links open in a new window.
 menu.projects = Projects
 menu.labs = Labs
-menu.experiment = Experiments
+menu.experiments = Experiments
 menu.submissions = Submissions
