--- a/modmine/webapp/resources/model.properties
+++ b/modmine/webapp/resources/model.properties
@@ -27,7 +27,7 @@ labs.intro = All the labs in the ModEncode consortium. \
 
 experiment.title = Experiments
 experiment.description = Experiments
-experiment.tab = experiments
+experiment.tab = experiment
 experiment.noFollow = true
 experiment.intro = All the experiments in the ModEncode consortium. \
                       NOTE:  All external links open in a new window.
