modmine webapp: now gbrowse images linking with location. waiting for list of types available in toronto

--- a/modmine/webapp/resources/web.properties
+++ b/modmine/webapp/resources/web.properties
@@ -9,11 +9,11 @@
 # NB: the link is to the TEST GBROWSE: need to be updated when available
 # e.g. http://modencode.oicr.on.ca/cgi-bin/gbrowse/worm
 attributelink.modencode1.Submission.6239.DCCid.url=http://modencode2.oicr.on.ca/fgb2/gbrowse/worm/?ds=<<attributeValue>>
-attributelink.modencode1.Submission.6239.DCCid.text=Preview track in GBrowse
+attributelink.modencode1.Submission.6239.DCCid.text=View tracks in GBrowse
 attributelink.modencode1.Submission.6239.DCCid.imageName=wgb_vs.png
 
 attributelink.modencode2.Submission.7227.DCCid.url=http://modencode2.oicr.on.ca/fgb2/gbrowse/fly/?ds=<<attributeValue>>
-attributelink.modencode2.Submission.7227.DCCid.text=Preview track in GBrowse
+attributelink.modencode2.Submission.7227.DCCid.text=View tracks in GBrowse
 attributelink.modencode2.Submission.7227.DCCid.imageName=dgb_vs.png
 
 attributelink.modencode3.Submission.*.DCCid.url=http://submit.modencode.org/submit/public/download/<<attributeValue>>?root=data
