--- a/modmine/integrate/resources/modencode-metadata_keys.properties
+++ b/modmine/integrate/resources/modencode-metadata_keys.properties
@@ -2,7 +2,7 @@ Transcript=key_primaryidentifier
 Organism=key_taxonid
 DataSet=key_title
 DataSource=key_name
-
+Gene=key_primaryidentifier
 #LocatedSequenceFeature=key_primaryidentifier
 Chromosome=key_primaryidentifier
 
