More sensible wrapping of lines in field values on the object details page, and truncating of lines in the results table. Refs #1784
Former-commit-id: a3c5b812bb53e9ed8e3f911d4747e9cda9a98148

--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -451,7 +451,7 @@ objectDetails.class = Class
 objectDetails.heading.details = Report Page
 objectDetails.heading.byaspect = Other details by category
 objectDetails.noSuchObject = Sorry, that item could not be found in the database
-objectDetails.viewall = [View all...]
+objectDetails.viewall = [View all]
 objectDetails.addToBag = Add this object to existing list:
 objectDetails.noFollow = true
 
