More class keys for modMine.

--- a/modmine/dbmodel/resources/class_keys.properties
+++ b/modmine/dbmodel/resources/class_keys.properties
@@ -23,13 +23,13 @@ MRNAExpressionTerm = name
 DataSet = title
 Deletion = primaryIdentifier, secondaryIdentifier
 MicroArrayAssay = name
-PrideExperiment = title, accessionId
-PrideProject = title
 PhenotypeAnnotation = description
 Project = surnamePI
 Lab = name
 Submission = title, DCCid
 Protocol = name
 SubmissionData = value
+SubmissionProperty = name
+ExperimentalFactor = name
 
 
