Ignore overlapping features in summarise-objectstore.
Former-commit-id: 35a3801015bbacf233142fbf6ea8163e089a2e35

--- a/modmine/dbmodel/resources/objectstoresummary.config.properties
+++ b/modmine/dbmodel/resources/objectstoresummary.config.properties
@@ -1,4 +1,5 @@
 max.field.values = 200
+ignore.counts = overlappingFeatures
 org.intermine.model.bio.Allele.fields = alleleClass
 
 org.intermine.model.bio.AnatomyTerm.fields = namespace
