--- a/bdellomine/integrate/.project
+++ b/bdellomine/integrate/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>skeletons-integrate</name>
+	<name>bdellomine-integrate</name>
 	<comment></comment>
 	<projects>
 	</projects>
