Update branch to trunk version 20090

--- a/modmine/dbmodel/resources/objectstoresummary.config.properties
+++ b/modmine/dbmodel/resources/objectstoresummary.config.properties
@@ -1,4 +1,5 @@
 max.field.values = 200
+ignore.counts = overlappingFeatures
 org.intermine.model.bio.Allele.fields = alleleClass
 
 org.intermine.model.bio.AnatomyTerm.fields = namespace
@@ -29,7 +30,6 @@ org.intermine.model.bio.UniProtFeature.fields = type
 org.intermine.model.bio.ProteinDomain.autocomplete = name shortName
 
 org.intermine.model.bio.GeneFlankingRegion.fields = direction distance
-org.intermine.model.bio.GeneFlankingRegion.autocomplete = primaryIdentifier
 
 org.intermine.model.bio.Experiment.autocomplete = name
 org.intermine.model.bio.Lab.autocomplete = name surname
