--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -617,9 +617,8 @@ login.login = Log in
 login.needspassword = If you have forgotten your password, \
   enter your email address here to have a password change link emailed to you
 login.passwordrequest = Request password
-login.emptyusername = Please enter a username
-login.invalidusername = No user found for email address &quot;{0}&quot;
-login.wrongpassword = Incorrect password: please try again
+login.emptyusername = Username not found
+login.badlogin = Username/password not found
 login.invalidemail = Unable to send confirmation email.
 login.loggedin = Logged in as user &quot;{0}&quot;
 login.loggedout = You have logged out
@@ -627,7 +626,7 @@ login.emailed = A change password link has been sent to &quot;{0}&quot;
 login.heading.password = Manage password
 login.tab = mymine
 login.renamedbags = Your list {0} was renamed to {1} because a list with that name already exists
-login.mailnotsent = Unable to send confirmation email.
+login.mailnotsent = Unable to send email.  Please try again.
 
 #Create account form
 createAccount.title = Create Account
