--- a/intermine/api/test/.classpath
+++ b/intermine/api/test/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/testmodel-dbmodel"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/intermine-web-tasks"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/intermine-integrate-test"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/testmodel"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
