--- a/intermine/objectstore/main/.classpath
+++ b/intermine/objectstore/main/.classpath
@@ -22,5 +22,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/commons-lang-2.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/base64.jar"/>
 	<classpathentry kind="lib" path="lib/ojdbc14.jar"/>
+	<classpathentry kind="lib" path="lib/xercesImpl-2.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
