links from yeast to zfin and flymine

--- a/yeastmine/webapp/resources/web.properties
+++ b/yeastmine/webapp/resources/web.properties
@@ -66,32 +66,35 @@ attributelink.zfin.Gene.7955.primaryIdentifier.url=http://zfin.org/cgi-bin/webdr
 attributelink.zfin.Gene.7955.primaryIdentifier.text=ZFIN: <<attributeValue>>
 attributelink.zfin.Gene.7955.primaryIdentifier.imageName=zfinlogo.png
 
-attributelink.zfinproto.Gene.7955.primaryIdentifier.url=http://www.flymine.org/zfin/portal.do?externalid=<<attributeValue>>
+attributelink.zfinproto.Gene.7955.primaryIdentifier.url=http://www.intermine.org/zfin/portal.do?externalid=<<attributeValue>>
 attributelink.zfinproto.Gene.7955.primaryIdentifier.text=ZFIN protomine: <<attributeValue>>
 attributelink.zfinproto.Gene.7955.primaryIdentifier.imageName=zfinlogo.png
+
+attributelink.zfinprotoList.Gene.7955.primaryIdentifier.list.url=http://www.intermine.org/zfin/portal.do?externalid=<<attributeValue>>
+attributelink.zfinprotoList.Gene.7955.primaryIdentifier.list.text=ZFIN protomine: <<attributeValue>>
+attributelink.zfinprotoList.Gene.7955.primaryIdentifier.list.imageName=zfinlogo.png
+attributelink.zfinprotoList.Gene.7955.primaryIdentifier.list.usePost=true
 
 attributelink.flymine.Gene.7227.primaryIdentifier.url=http://www.flymine.org/portal.do?externalid=<<attributeValue>>&class=Gene
 attributelink.flymine.Gene.7227.primaryIdentifier.text=FlyMine: <<attributeValue>>
 attributelink.flymine.Gene.7227.primaryIdentifier.imageName=flymine_logo_link.gif
 
+attributelink.flymineList.Gene.7227.primaryIdentifier.list.url=http://www.flymine.org/portal.do?externalid=<<attributeValue>>&class=Gene
+attributelink.flymineList.Gene.7227.primaryIdentifier.list.text=FlyMine: <<attributeValue>>
+attributelink.flymineList.Gene.7227.primaryIdentifier.list.imageName=flymine_logo_link.gif
+attributelink.flymineList.Gene.7227.primaryIdentifier.list.usePost=true
+
 # ----------- ortho links -----------------------
 
-#attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.url=http://www.flymine.org/query/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=D.%20melanogaster
-#attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.text=D.mel orthologues in FlyMine
-#attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.imageName=flymine_logo_link.gif
-#attributelink.flymineOrthologues.Gene.4932.primaryIdentifier.list.usePost=true
-
-attributelink.zfinOrthologues.Gene.4932.secondaryIdentifier.list.url=http://localhost:8080/zfin/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=D. rerio
-#attributelink.zfinOrthologues.Gene.4932.secondaryIdentifier.list.url=http://www.flymine.org/zfin/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=D. rerio&delim=%24
+attributelink.zfinOrthologues.Gene.4932.secondaryIdentifier.list.url=http://www.flymine.org/zfin/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=D. rerio&delim=%24
 attributelink.zfinOrthologues.Gene.4932.secondaryIdentifier.list.text=D.rerio orthologues at ZFIN protomine
 attributelink.zfinOrthologues.Gene.4932.secondaryIdentifier.list.imageName=zfinlogo.png
 attributelink.zfinOrthologues.Gene.4932.secondaryIdentifier.list.usePost=true
-attributelink.zfinOrthologues.Gene.4932.secondaryIdentifier.list.delimiter=%24
 
-attributelink.flyList.Gene.4932.primaryIdentifier.list.url=http://preview.flymine.org/preview/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=D. melanogaster
-attributelink.flyList.Gene.4932.primaryIdentifier.list.text=D.mel orthologues in FlyMine
-attributelink.flyList.Gene.4932.primaryIdentifier.list.imageName=flymine_logo_link.gif
-attributelink.flyList.Gene.4932.primaryIdentifier.list.usePost=true
+attributelink.flyOrthoList.Gene.4932.primaryIdentifier.list.url=http://www.flymine.org/query/portal.do?externalids=<<attributeValue>>&class=Gene&orthologue=D. melanogaster
+attributelink.flyOrthoList.Gene.4932.primaryIdentifier.list.text=D.mel orthologues in FlyMine
+attributelink.flyOrthoList.Gene.4932.primaryIdentifier.list.imageName=flymine_logo_link.gif
+attributelink.flyOrthoList.Gene.4932.primaryIdentifier.list.usePost=true
 
 #list of pages with fixed width layout
 layout.fixed = begin,template,templates,bag,customQuery,query
