Add new hints system to appear at top of webapp pages.

--- a/intermine/webapp/main/resources/webapp/WEB-INF/global.web.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/global.web.properties
@@ -62,3 +62,17 @@ help.page.importQueries=importQueries
 help.page.importTemplates=importTemplates
 help.page.tree=tree
 help.page.aspect=dataCategory
+
+hint.begin.1=You can create MyMine account and log in to save queries and lists permanently.
+hint.begin.2=Click on the 'Data' tab above for details or the data sets that have been included.
+hint.templates.1=If you create a MyMine account and log in you can create your own Template Queries.
+hint.template.1=You can run template queries on whole lists of data. Lists of the correct type will \
+appear automatically, click the checkbox to use a list.
+hint.template.2=You can use '*' as a wildcard when entering text constraint values.
+hint.results.1=Create lists from results tables using the checkboxes and 'CREATE LIST' from the \
+menu bar.  Use checkboxes in the table header to select all rows in the results.
+hint.results.2=You can see a summary of any column in results by clicking the [sigma icon]
+hint.results.3=Use 'EXPORT' from the menu below to download the results of this query in a choice \
+of formats.
+hint.bag.1=Use the 'Upload' and 'View' links above to switch between the list upload form and \
+lists that have already been created.
