Checkstyle and ignores
Former-commit-id: d4e6c4494fccd1bf0fc03743acff279163d79910

--- a/intermine/api/test/project.properties
+++ b/intermine/api/test/project.properties
@@ -15,4 +15,4 @@ userprofile.model.name = userprofile
 
 intermine.properties.file = intermine-test.properties
 default.intermine.properties.file = ../../default.intermine.properties
-emma.enabled=false
+emma.enabled=true
