Remove debug info, clean up a hint.

--- a/intermine/webapp/main/resources/webapp/WEB-INF/global.web.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/global.web.properties
@@ -71,7 +71,7 @@ appear automatically, click the checkbox to use a list.
 hint.template.2=You can use '*' as a wildcard when entering text constraint values.
 hint.results.1=Create lists from results tables using the checkboxes and 'CREATE LIST' from the \
 menu bar.  Use checkboxes in the table header to select all rows in the results.
-hint.results.2=You can see a summary of any column in results by clicking the [sigma icon]
+hint.results.2=You can see a summary of any results column by clicking the sigma icon in the header.
 hint.results.3=Use 'EXPORT' from the menu below to download the results of this query in a choice \
 of formats.
 hint.bag.1=Use the 'Upload' and 'View' links above to switch between the list upload form and \
