--- a/yeastmine/webapp/resources/web.properties
+++ b/yeastmine/webapp/resources/web.properties
@@ -75,11 +75,11 @@ attributelink.zfinprotoList.Gene.7955.primaryIdentifier.list.text=ZFIN protomine
 attributelink.zfinprotoList.Gene.7955.primaryIdentifier.list.imageName=zfinlogo.png
 attributelink.zfinprotoList.Gene.7955.primaryIdentifier.list.usePost=true
 
-attributelink.flymine.Gene.7227.primaryIdentifier.url=http://www.flymine.org/portal.do?externalid=<<attributeValue>>&class=Gene
+attributelink.flymine.Gene.7227.primaryIdentifier.url=http://www.flymine.org/query/portal.do?externalid=<<attributeValue>>&class=Gene
 attributelink.flymine.Gene.7227.primaryIdentifier.text=FlyMine: <<attributeValue>>
 attributelink.flymine.Gene.7227.primaryIdentifier.imageName=flymine_logo_link.gif
 
-attributelink.flymineList.Gene.7227.primaryIdentifier.list.url=http://www.flymine.org/portal.do?externalid=<<attributeValue>>&class=Gene
+attributelink.flymineList.Gene.7227.primaryIdentifier.list.url=http://www.flymine.org/query/portal.do?externalid=<<attributeValue>>&class=Gene
 attributelink.flymineList.Gene.7227.primaryIdentifier.list.text=FlyMine: <<attributeValue>>
 attributelink.flymineList.Gene.7227.primaryIdentifier.list.imageName=flymine_logo_link.gif
 attributelink.flymineList.Gene.7227.primaryIdentifier.list.usePost=true
