better template builder help msgs
Former-commit-id: c3301857acafbdd62cedbbefec89b8cb6811d92b

--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -298,9 +298,10 @@ templateBuilder.title = Build template
 templateBuilder.description = Configure your template query
 templateBuilder.tab = templates
 templateBuilder.new = Building a new template query
-templateBuilder.save.msg = Update the fields below and click on the "Update Settings" button.  \
-Once you have completed this step, click on the "Update template" button below to save this information. \
-Please note that template names may only contain letters, numbers, spaces, and underscores.
+templateBuilder.save.msg = <ul><li>Update the fields below and click on the "Update Settings" button.  \
+<li>Click on the "Update template" button below to save this information. 
+templateBuilder.nameHelp = The name should be short and contain no special characters, eg. Gene_proteins.
+templateBuilder.titleHelp = The title and description should be human readable, eg. Gene --> Proteins
 templateBuilder.shortName = Name:
 templateBuilder.editable = Editable:
 templateBuilder.label = Constraint label:
