--- a/modmine/default.intermine.integrate.properties
+++ b/modmine/default.intermine.integrate.properties
@@ -73,6 +73,67 @@ db.modencode-metadata.driver=org.postgresql.Driver
 db.modencode-metadata.platform=PostgreSQL
 
 
+db.modencode-celniker-metadata.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.modencode-celniker-metadata.datasource.dataSourceName=db.modencode-celniker-metadata
+db.modencode-celniker-metadata.datasource.maxConnections=10
+db.modencode-celniker-metadata.driver=org.postgresql.Driver
+db.modencode-celniker-metadata.platform=PostgreSQL
+
+db.modencode-henikoff-metadata.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.modencode-henikoff-metadata.datasource.dataSourceName=db.modencode-henikoff-metadata
+db.modencode-henikoff-metadata.datasource.maxConnections=10
+db.modencode-henikoff-metadata.driver=org.postgresql.Driver
+db.modencode-henikoff-metadata.platform=PostgreSQL
+
+db.modencode-karpen-metadata.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.modencode-karpen-metadata.datasource.dataSourceName=db.modencode-karpen-metadata
+db.modencode-karpen-metadata.datasource.maxConnections=10
+db.modencode-karpen-metadata.driver=org.postgresql.Driver
+db.modencode-karpen-metadata.platform=PostgreSQL
+
+db.modencode-lai-metadata.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.modencode-lai-metadata.datasource.dataSourceName=db.modencode-lai-metadata
+db.modencode-lai-metadata.datasource.maxConnections=10
+db.modencode-lai-metadata.driver=org.postgresql.Driver
+db.modencode-lai-metadata.platform=PostgreSQL
+
+db.modencode-lieb-metadata.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.modencode-lieb-metadata.datasource.dataSourceName=db.modencode-lieb-metadata
+db.modencode-lieb-metadata.datasource.maxConnections=10
+db.modencode-lieb-metadata.driver=org.postgresql.Driver
+db.modencode-lieb-metadata.platform=PostgreSQL
+
+db.modencode-macalpine-metadata.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.modencode-macalpine-metadata.datasource.dataSourceName=db.modencode-macalpine-metadata
+db.modencode-macalpine-metadata.datasource.maxConnections=10
+db.modencode-macalpine-metadata.driver=org.postgresql.Driver
+db.modencode-macalpine-metadata.platform=PostgreSQL
+
+db.modencode-piano-metadata.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.modencode-piano-metadata.datasource.dataSourceName=db.modencode-piano-metadata
+db.modencode-piano-metadata.datasource.maxConnections=10
+db.modencode-piano-metadata.driver=org.postgresql.Driver
+db.modencode-piano-metadata.platform=PostgreSQL
+
+db.modencode-snyder-metadata.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.modencode-snyder-metadata.datasource.dataSourceName=db.modencode-snyder-metadata
+db.modencode-snyder-metadata.datasource.maxConnections=10
+db.modencode-snyder-metadata.driver=org.postgresql.Driver
+db.modencode-snyder-metadata.platform=PostgreSQL
+
+db.modencode-waterston-metadata.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.modencode-waterston-metadata.datasource.dataSourceName=db.modencode-waterston-metadata
+db.modencode-waterston-metadata.datasource.maxConnections=10
+db.modencode-waterston-metadata.driver=org.postgresql.Driver
+db.modencode-waterston-metadata.platform=PostgreSQL
+
+db.modencode-white-metadata.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
+db.modencode-white-metadata.datasource.dataSourceName=db.modencode-white-metadata
+db.modencode-white-metadata.datasource.maxConnections=10
+db.modencode-white-metadata.driver=org.postgresql.Driver
+db.modencode-white-metadata.platform=PostgreSQL
+
+
 ##### ITEMS DATABASES #####
 
 # global target (tgt) items objectstore
