--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -298,10 +298,10 @@ templateBuilder.title = Build template
 templateBuilder.description = Configure your template query
 templateBuilder.tab = templates
 templateBuilder.new = Building a new template query
-templateBuilder.save.msg = <ul><li>Update the fields below and click on the "Update Settings" button.  \
-<li>Click on the "Update template" button below to save this information. 
-templateBuilder.nameHelp = The name should be short and contain no special characters, eg. Gene_proteins.
-templateBuilder.titleHelp = The title and description should be human readable, eg. Gene --> Proteins
+templateBuilder.saveIntro = Update the fields below and click on the "Update Settings" button.  Your changes won't be saved until you click the "Update template" button.
+templateBuilder.savePrompt = Click on the "Update template" button below to save this information. 
+templateBuilder.nameHelp = Used by webservices, javascript etc. and should contain no special characters, eg. Gene_proteins
+templateBuilder.titleHelp = Should be human readable, eg. Gene --> Proteins
 templateBuilder.shortName = Name:
 templateBuilder.editable = Editable:
 templateBuilder.label = Constraint label:
