Add resolver for WormBase genes, set strain and cell line targets.  Set wiki links.
Former-commit-id: fffd0752f0e5baabddb76fb07354f91ac6772bb3

--- a/modmine/integrate/resources/modencode-metadata_keys.properties
+++ b/modmine/integrate/resources/modencode-metadata_keys.properties
@@ -1,4 +1,5 @@
-#Transcript=key_primaryidentifier
+Gene=key_primaryidentifier
+Transcript=key_primaryidentifier
 Organism=key_taxonid
 DataSet=key_title
 DataSource=key_name
