Additional keys for modENCODE sources.

--- a/modmine/integrate/resources/modencode-metadata_keys.properties
+++ b/modmine/integrate/resources/modencode-metadata_keys.properties
@@ -4,6 +4,7 @@ Organism=key_taxonid
 DataSet=key_title
 DataSource=key_name
 Chromosome=key_primaryidentifier
+CDNA=key_primaryidentifier
 
 Lab=key_name
 Project=key_surnamePI
