--- a/intermine/webapp/main/resources/webapp/WEB-INF/global.web.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/global.web.properties
@@ -76,3 +76,42 @@ hint.results.3=Use 'EXPORT' from the menu below to download the results of this 
 of formats.
 hint.bag.1=Use the 'Upload' and 'View' links above to switch between the list upload form and \
 lists that have already been created.
+
+# list of intermines
+# used on the linkouts section of the list analysis page
+
+#intermines.flymine.url=http://localhost:8080/preview
+#intermines.flymine.name=FlyMine
+#intermines.flymine.logo=flymine_logo_link.gif
+#intermines.flymine.defaultOrganism=D. melanogaster
+#intermines.flymine.defaultMapping=remote
+
+intermines.modmine.url=http://intermine.modencode.org/query
+intermines.modmine.name=ModMine
+intermines.modmine.logo=modminelogo.png
+intermines.modmine.defaultOrganism=D. melanogaster
+intermines.modmine.defaultMapping=remote
+
+intermines.flymine.url=http://preview.flymine.org/preview
+intermines.flymine.name=FlyMine
+intermines.flymine.logo=flymine_logo_link.gif
+intermines.flymine.defaultOrganism=D. melanogaster
+intermines.flymine.defaultMapping=remote
+
+intermines.ratmine.url=http://ratmine.mcw.edu/ratmine
+intermines.ratmine.name=RatMine
+intermines.ratmine.logo=ratmine_logo.png
+intermines.ratmine.defaultOrganism=R. norvegicus
+intermines.ratmine.defaultMapping=remote
+
+intermines.yeastmine.url=http://yeastmine.yeastgenome.org:8080/yeastmine
+intermines.yeastmine.name=YeastMine
+intermines.yeastmine.logo=SGD_logo_small.png
+intermines.yeastmine.defaultOrganism=S. cerevisiae
+intermines.yeastmine.defaultMapping=remote
+
+intermines.zfinmine.url=http://moxy.uoregon.edu/zfinmine
+intermines.zfinmine.name=FishMine
+intermines.zfinmine.logo=zfinlogo.png
+intermines.zfinmine.defaultOrganism=D. rerio
+intermines.zfinmine.defaultMapping=remote
