--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -139,6 +139,7 @@ query.loopQueryConstraint = Constrain to another field:
 query.subclassConstraint = Constrain to be subtype:
 query.bagUploadConstraint = List of identifiers:
 query.lookupConstraintLabel = LOOKUP:
+query.lookupConstraintHelp = Search multiple fields including: {0}
 query.showNode = show
 query.showNodeTitle = Show {0} in results
 query.addConstraint = constrain
