make error msg more specific
Former-commit-id: a1dc84c02e4f25beef778e96488a02e2317e8e5f

--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -730,7 +730,7 @@ errors.badtemplatexml = Error parsing template XML: {0}
 errors.importFailed = Import of query(ies) failed. Invalid format of query: "{0}"
 errors.importFailedException = Import of query(ies) failed. Invalid format of query or model of query is wrong or doesn't exist.
 errors.importQuery.noqueries = No valid queries found
-errors.badportalquery = Bad link into InterMine
+errors.badportalidentifiers = Bad link into InterMine, no identifiers found.
 errors.badportalclass = No class or wrong class specified
 #errors.pollquery.badqid = I'm sorry, I can't find a running query with qid {0}
 errors.pollquery.emptyqid = No qid specified. (qid is "{0}")
