--- a/intermine/webapp/main/resources/webapp/WEB-INF/global.web.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/global.web.properties
@@ -79,12 +79,7 @@ lists that have already been created.
 
 # list of intermines
 # used on the linkouts section of the list analysis page
-
-#intermines.flymine.url=http://localhost:8080/preview
-#intermines.flymine.name=FlyMine
-#intermines.flymine.logo=flymine_logo_link.gif
-#intermines.flymine.defaultOrganism=D. melanogaster
-#intermines.flymine.defaultMapping=remote
+# intermines.MINE_NAME = this mine name should match the `project.title` in your properties file
 
 intermines.modmine.url=http://intermine.modencode.org/query
 intermines.modmine.name=ModMine
@@ -93,7 +88,7 @@ intermines.modmine.defaultOrganism=D. melanogaster
 intermines.modmine.defaultMapping=remote
 
 intermines.flymine.url=http://preview.flymine.org/preview
-intermines.flymine.name=FlyMine
+intermines.flymine.name=FlyMine Preview
 intermines.flymine.logo=flymine_logo_link.gif
 intermines.flymine.defaultOrganism=D. melanogaster
 intermines.flymine.defaultMapping=remote
