turn off debug mode for demo purposes.  change name of mine.

--- a/intermine/webapp/main/resources/webapp/WEB-INF/global.web.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/global.web.properties
@@ -79,7 +79,7 @@ lists that have already been created.
 
 # list of intermines
 # used on the linkouts section of the list analysis page
-# intermines.MINE_NAME = this mine name should match the `project.title` in your properties file
+# NOTE: name has to match the `project.title` in your properties file
 
 intermines.modmine.url=http://intermine.modencode.org/query
 intermines.modmine.name=ModMine
@@ -88,7 +88,7 @@ intermines.modmine.defaultOrganism=D. melanogaster
 intermines.modmine.defaultMapping=remote
 
 intermines.flymine.url=http://preview.flymine.org/preview
-intermines.flymine.name=FlyMine Preview
+intermines.flymine.name=FlyMine
 intermines.flymine.logo=flymine_logo_link.gif
 intermines.flymine.defaultOrganism=D. melanogaster
 intermines.flymine.defaultMapping=remote
