change contact us text
Former-commit-id: cf148990486363f17f871f1d911cf6a4ed2c2048

--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -2,7 +2,7 @@
 # merges with model.properties
 
 # footer
-feedback.title = Questions?  Comments?  Contact Us!
+feedback.title = Questions?  Comments?  Click here!
 
 intermine.superuser.msg = Admin mode
 
