add contact us link to the header

--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -3,6 +3,8 @@
 
 # footer
 feedback.title = Questions?  Comments?  Click here!
+# link in subheader
+feedback.link = Contact Us
 
 intermine.superuser.msg = Admin mode
 
