--- a/intermine/webapp/main/resources/webapp/WEB-INF/global.web.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/global.web.properties
@@ -63,7 +63,7 @@ help.page.importTemplates=importTemplates
 help.page.tree=tree
 help.page.aspect=dataCategory
 
-hint.begin.1=You can create MyMine account and log in to save queries and lists permanently.
+hint.begin.1=You can create a MyMine account and log in to save queries and lists permanently.
 hint.begin.2=Click on the 'Data' tab above for details or the data sets that have been included.
 hint.templates.1=If you create a MyMine account and log in you can create your own Template Queries.
 hint.template.1=You can run template queries on whole lists of data. Lists of the correct type will \
