--- a/modmine/webapp/resources/web.properties
+++ b/modmine/webapp/resources/web.properties
@@ -6,13 +6,14 @@
 # If a "*" is placed as the taxId, the list details page will link to that db in any case (see flymine).
 # If a taxId is present, the page will link to that db only if there are objects in the list with that taxId (see wormbase).
 
-# NB: the link is to the TEST GBROWSE: need to be updated when available
-# e.g. http://modencode.oicr.on.ca/cgi-bin/gbrowse/worm
-attributelink.modencode1.Submission.6239.DCCid.url=http://modencode.oicr.on.ca/fgb2/gbrowse/worm/?ds=<<attributeValue>>
+attributelink.modencode0.SubmissionProperty.*.wikiLink.url=<<attributeValue>>
+attributelink.modencode0.SubmissionProperty.*.wikiLink.text=<<attributeValue>>
+
+attributelink.modencode1.Submission.6239.DCCid.url=http://modencode.oicr.on.ca/gb2/gbrowse/worm/?ds=<<attributeValue>>
 attributelink.modencode1.Submission.6239.DCCid.text=View tracks in GBrowse
 attributelink.modencode1.Submission.6239.DCCid.imageName=wgb_vs.png
 
-attributelink.modencode2.Submission.7227.DCCid.url=http://modencode.oicr.on.ca/fgb2/gbrowse/fly/?ds=<<attributeValue>>
+attributelink.modencode2.Submission.7227.DCCid.url=http://modencode.oicr.on.ca/gb2/gbrowse/fly/?ds=<<attributeValue>>
 attributelink.modencode2.Submission.7227.DCCid.text=View tracks in GBrowse
 attributelink.modencode2.Submission.7227.DCCid.imageName=dgb_vs.png
 
