--- a/modmine/integrate/resources/modencode-metadata_keys.properties
+++ b/modmine/integrate/resources/modencode-metadata_keys.properties
@@ -5,6 +5,8 @@ DataSet=key_title
 DataSource=key_name
 Chromosome=key_primaryidentifier
 CDNA=key_primaryidentifier
+Ontology = key_title
+OntologyTerm = key_name_ontology
 
 Lab=key_name
 Project=key_surnamePI
