Config for DatabaseRecord.
Former-commit-id: ed8c4e2ecb90202190bc6ce9da158e6dc8bcce61

--- a/modmine/dbmodel/resources/objectstoresummary.config.properties
+++ b/modmine/dbmodel/resources/objectstoresummary.config.properties
@@ -67,3 +67,5 @@ org.intermine.model.bio.Tissue.autocomplete = name
 
 org.intermine.model.bio.ExperimentalFactor.fields = type 
 org.intermine.model.bio.ExperimentalFactor.autocomplete = name 
+
+org.intermine.model.bio.DatabaseRecord.fields = database description
