--- a/modmine/dbmodel/resources/objectstoresummary.config.properties
+++ b/modmine/dbmodel/resources/objectstoresummary.config.properties
@@ -69,3 +69,5 @@ org.intermine.model.bio.ExperimentalFactor.fields = type
 org.intermine.model.bio.ExperimentalFactor.autocomplete = name 
 
 org.intermine.model.bio.DatabaseRecord.fields = database description
+
+org.intermine.model.bio.LocatedSequenceFeature.fields = featureType
