Added page titles.
Former-commit-id: ce4fd3c97dd1d5081fc832889552188604d640ca

--- a/modmine/webapp/resources/model.properties
+++ b/modmine/webapp/resources/model.properties
@@ -42,3 +42,6 @@ menu.projects = Projects
 menu.labs = Labs
 menu.experiment = Experiments
 menu.submissions = Submissions
+
+searchresults.tab = begin
+searchresults.title = Search
